fix tostify and change product image size on mobile

--- a/client/components/ProductItem/ProductItem.scss
+++ b/client/components/ProductItem/ProductItem.scss
@@ -16,9 +16,9 @@
   @include screen('desktop') {
     &:hover {
       border: 4px solid $orange;
-  
-      .addToCart {
-        opacity: 1;
+
+    .addToCart {
+    	opacity: 1;
       }
     }
   }
@@ -53,7 +53,7 @@
     font-size: 14px;
     line-height: 20px;
     color: $white;
-    padding: 0 10px 0 0;  
+    padding: 0 10px 0 0;
   }
 
   ul {
@@ -142,6 +142,10 @@
 .productImg {
   width: 220px;
   margin: 0 0 35px 0;
+
+  @include screen('mobile') {
+    width: 160px;
+  }
 
   img {
     width: 100%;
