--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -14,52 +14,33 @@
     background-size: auto auto;
     background-color: black;
   }
-
-  @keyframes zoomIn {
-    from {
-      opacity: 0;
-      transform: scale3d(.3, .3, .3);
-    }
-  
-    50% {
-      opacity: 1;
-    }
-  }
-  
-  .zoomIn {
-    animation-name: zoomIn;
-  }
-  
-  @keyframes zoomOut {
-    from {
-      opacity: 1;
-    }
-  
-    50% {
-      opacity: 0;
-      transform: scale3d(.3, .3, .3);
-    }
-  
-    to {
-      opacity: 0;
-    }
-  }
-  
-  .zoomOut {
-    animation-name: zoomOut;
-  }
   
   .Toastify__toast-container {
     &.cart-toast-container {
       margin-top: 100px;
+
+      @include screen('mobile') {
+        margin-top: 0;
+        margin-bottom: 10px;
+      }
     }
   }
+
+  .Toastify
   
   .Toastify {
+    &__progress-bar {
+      background-color: rgba(253, 188, 44, 1);
+    }
     &__toast {
       &--info {
         &.cart-toast {
-          background-color: rgba(0, 0, 0, 0.8);
+          background-color: rgba(0, 0, 0, 0.9);
+
+          @include screen('mobile') {
+            background-color: rgba(0, 0, 0, 0.98);
+          }
+
           .Toastify__toast-body {
             font-family: $el-mis-reg;
             font-size: 14px;
@@ -70,7 +51,12 @@
   
       &--error {
         &.cart-toast {
-          background-color: rgba(255, 0, 0, 0.8);
+          background-color: rgba(0, 0, 0, 0.9);
+
+          @include screen('mobile') {
+            background-color: rgba(0, 0, 0, 0.98);
+          }
+
           .Toastify__toast-body {
             font-family: $el-mis-reg;
             font-size: 14px;
